2006-05-16  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout.el (allout-show-bodies, allout-old-style-prefixes)
	(allout-stylish-prefixes, allout-numbered-bullet)
	(allout-file-xref-bullet, allout-use-hanging-indents): Use simple
	predicates to qualify `safe-local-variable' property, when
	available, else use equivalent lambda.
	(allout-current-topic-collapsed-p): Do the right thing regarding
	trailing blank lines.

2006-05-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* server.el (server-start): Only create a directory if needed.
	(server-edit, server-unload-hook): server-start => server-mode.
	(kill-emacs-hook): Cleanup upon exit.

2006-05-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* hexl.el (hexlify-buffer): Encode process arguments manually.

2006-05-16  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-tooltip-tips): Add missing argument to
	call to gdb-tooltip-print.

2006-05-15  Romain Francoise  <romain@orebokech.com>

	* dired-x.el (dired-guess-shell-gnutar): On GNU and GNU/Linux
	systems, default to "tar" since those systems probably have GNU tar.

2006-05-14  Lars Hansen  <larsh@soem.dk>

	* desktop.el (desktop-missing-file-warning): Fix docstring.
	(desktop-restore-file-buffer): Correct question asked on missing file.

2006-05-14  Kim F. Storm  <storm@cua.dk>

	* progmodes/cc-subword.el (c-forward-subword, c-backward-subword):
	Add CUA move property.

2006-05-13  Chong Yidong  <cyd@stupidchicken.com>

	* custom.el (custom-push-theme): Load the variable before checking
	its `standard-value'.

2006-05-13  Lars Hansen  <larsh@soem.dk>

	* desktop.el (desktop-save): Use with-temp-buffer.

2006-05-12  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-menu.el (calendar-mode-map, calendar-mouse-3-map):
	* calendar/calendar.el (calendar-mode-map):
	* calendar/diary-lib.el (include-other-diary-files,diary-mail-entries):
	* calendar/appt.el (appt-check, appt-make-list): Refer to
	diary-view-entries, diary-list-entries, diary-show-all-entries